# kecal

./: .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: test.yml
kecal/: __init__.py  client.py  server.py
tests/: test_kecal.py  test_pychater.py
